# graysite

./: CMakeLists.txt
include/: GRY_MdMetadata.hpp  GRY_SSG.hpp  GRY_mdTohtml.hpp  formatter.hpp  md4c-html-process.hpp
src/: GRY_MdMetadata.cpp  GRY_SSG.cpp  GRY_mdTohtml.cpp  formatter.cpp  main.cpp  md4c-html-process.cpp
test/: footer.html  footerBack.html  index.html  index.md  style.css
test/writing/: index.html  index.md  readStyle.css
test/writing/TheRegressingWorld/: Chapter1.html  Chapter1.md  Chapter2.html  Chapter2.md  Default.txt  header.html  index.html  index.md
